Bug 564672 - [15] type identifier "record" not flagging errors in some type context
- added tests for preview disabled

Change-Id: If5ba14a1d93c41a95e70bc6793a6c5096b1ae0d7